tests/ui/typeck/issue-89044-wrapped-expr-method.stderr
error[E0615]: attempted to take value of method `unwrap` on type `Option<{integer}>`
  --> $DIR/issue-89044-wrapped-expr-method.rs:7:12
   |
LL |         (a.unwrap)
   |            ^^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |         (a.unwrap())
   |                  ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0615`.
